[gd_scene load_steps=7 format=2]

[ext_resource path="res://Worlds/Tiers/1-1/VeryFirstWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://Artifacts(and RougeManager)/RougeManager.gd" type="Script" id=6]
[ext_resource path="res://UI/Global_HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Map/Map.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="RougeManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="VeryFirstWorld" parent="RougeManager" instance=ExtResource( 1 )]
player_position = Vector2( 5, 2 )

[node name="Player" parent="RougeManager" instance=ExtResource( 2 )]
position = Vector2( 0, 384 )

[node name="Global_HUD" parent="RougeManager" instance=ExtResource( 8 )]
layer = 3
map_path = NodePath("Map")

[node name="Map" parent="RougeManager/Global_HUD" instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
